FAMILIA, CHANGES

#### 0.6.2 (2010-12-23) ###############################

* FIXED: Familia::ClassMethods.ttl=
* FIXED: Familia.class_lists (etc) methods. 
* FIXED: Redis objects check if parent is a Module
* CHANGE: redis_objects, class_redis_objects maintain order they're defined in. (See Bluth::Queue)
* ADDED: InstanceMethods#initialize calls init if available

#### 0.6.1 (2010-12-18) ###############################

* CHANGE: Default initialize method calls initialize_redis_objects before super
* CHANGE: Familia::String: lazy-set default value
* ADDED: Familia.index can accept an Array of field names
* ADDED: Support for using redis objects directly
* ADDED RedisObject.ttl, RedisObject.db
* ADDED: Familia classes maintain a set of instances (by index) which is updated
automatically anytime an instance is saved or destroyed. 


#### 0.6.0 (2010-12-10) ###############################

NOTE: Mucho refactoring. 0.6 syntax is not compatible with previous versions. 

CHANGE: All methods name "key" are now "rediskey"
CHANGE: Familia#destroy! no longer takes a suffix argument. It now deletes
        the object and all suffixes. See destroy. 
CHANGE: Redis Object class methods now take the following args: name, options={}
CHANGE: Familia class suffixes are now derived from redis_objects
ADDED: Familia#destroy deletes just the object. 


#### 0.5.3 (2010-12-10) ###############################

Initial public release
