@@ -6,6 +6,7 @@ FAMILIA, CHANGES
 * FIXED: Familia.class_lists (etc) methods. 
 * FIXED: Redis objects check if parent is a Module
 * CHANGE: redis_objects, class_redis_objects maintain order they're defined in. (See Bluth::Queue)
+* CHANGE: Removed load_or_create
 * ADDED: InstanceMethods#initialize calls init if available
 
 #### 0.6.1 (2010-12-18) ###############################
